Fixed ngModel reference for address, added additional styles for spacing

--- a/shopping-app/src/app/components/account/account.component.scss
+++ b/shopping-app/src/app/components/account/account.component.scss
@@ -7,9 +7,10 @@ div.place-input-container {
     width: 400px;
     height: auto;
     margin: 0 auto;
+    margin-bottom: 40px;
 }
 
 div.place-input-container > * {
     display: block;
-    
+    margin: 10px 0px;
 }
